2013-04-21  Asterisk Development Team <asteriskteam@digium.com>

	* Asterisk 1.8.27.0-rc2 Released.

	* chan_sip: Add sendrpid trust options

	  In r411189, some behavior was changed which made sendrpid behavior
	  act in a more trusting manner by sending full user data for peers
	  set with private caller presence in P-Asserted-Identity headers.
	  Since this changed long time expected behaviors, we decided to pull
	  that patch when that was pointed out by the community. Instead, this
	  patch provides a trust_id_outbound setting which will expose the data
	  per RFC-3325 if set to 'yes' and simply not send the PAI/RPID headers
	  at all if set to 'no'. By default trust_id_outbound will be set to
	  'legacy' which will preserve the behavior prior to these patches.
	  Extra special thanks to Walter Doekes for providing advice and
	  feedback.

2014-03-28  Asterisk Development Team <asteriskteam@digium.com>

	* Asterisk 1.8.27.0-rc1 Released.

2014-03-28 16:16 +0000 [r411462]  Scott Griepentrog <sgriepentrog@digium.com>

	* main/http.c, main/tcptls.c, main/manager.c: http: response body
	  often missing after specific request This patch works around a
	  problem with the HTTP body being dropped from the response to a
	  specific client and under specific circumstances: a) Client
	  request comes from node.js user agent "Shred" via use of
	  swagger-client library. b) Asterisk and Client are *not* on the
	  same host or TCP/IP stack In testing this problem, it has been
	  determined that the write of the HTTP body is lost, even if the
	  data is written using low level write function. The only solution
	  found is to instruct the TCP stack with the shutdown function to
	  flush the last write and finish the transmission. See review for
	  more details. ASTERISK-23548 #close (closes issue ASTERISK-23548)
	  Reported by: Sam Galarneau Review:
	  https://reviewboard.asterisk.org/r/3402/

2014-03-28 15:42 +0000 [r411372-411457]  Matthew Jordan <mjordan@digium.com>
