@@ -1,3 +1,7 @@
+2013-04-23  Asterisk Development Team <asteriskteam@digium.com>
+
+	* Asterisk 1.8.27.0 Released.
+
 2013-04-21  Asterisk Development Team <asteriskteam@digium.com>
 
 	* Asterisk 1.8.27.0-rc2 Released.
